updated button design on hover and worked out some spacing issues

--- a/app/scss/dashboard-accordion.scss
+++ b/app/scss/dashboard-accordion.scss
@@ -20,18 +20,23 @@ body {
 
             h1 {
               img {
-                height: 15px;
+                height: 17px;
+                margin-bottom: 7px;
               }
 
-              
               .accordion-button {
                 font-size: 2rem;
                 color: gray;
                 padding-left: 0;
                 text-decoration: none;
-                
+
                 &:hover {
                   text-decoration: none;
+                }
+
+                &:active,
+                &:focus {
+                  color: #c3002f;
                 }
               }
 
@@ -57,8 +62,14 @@ body {
               border-radius: 25px;
               border: none;
               color: #ffffff;
-              width: 130px;
+              width: 132px;
               height: 24px;
+
+              &:hover {
+                background-color: #ffffff;
+                color: #c3002f;
+                border: solid 1px #c3002f;
+              }
 
               p {
                 padding-top: 4px;
@@ -75,7 +86,7 @@ body {
                 }
                 ul {
                   list-style-type: none;
-                  max-width: 450px;
+                  max-width: 400px;
 
                   li {
                     border-top: none;
@@ -170,27 +181,35 @@ body {
                       margin-bottom: 0.75rem;
                     }
                   }
+
+                  .button {
+                    background-color: #ffffff;
+                    padding: 0px 30px;
+                    border-radius: 25px;
+                    border: 1px solid #c3002f;
+                    // color: #c3002f;
+                    width: 150px;
+  
+                    &:hover {
+                      background-color: #c3002f;
+
+                      p {
+                        color: white;
+                      }
+                    }
+  
+                    p {
+                      padding-top: 4px;
+                      color: #c3002f;
+                      margin: 0;
+                      font-size: 0.8rem;
+                    }
+                  }
                 }
                 .knife,
                 .backpack,
                 .multi-tool {
                   display: none;
-                }
-
-                button {
-                  background-color: #ffffff;
-                  padding: 0px 30px;
-                  border-radius: 25px;
-                  border: 1px solid #c3002f;
-                  color: #ffffff;
-                  width: 150px;
-
-                  p {
-                    padding-top: 4px;
-                    color: #c3002f;
-                    margin: 0;
-                    font-size: 0.8rem;
-                  }
                 }
               }
             }
@@ -207,6 +226,11 @@ body {
       .dashboard-main-container {
         .accordion {
           .card {
+            #collapseThree {
+              .card {
+                margin-left: 40px;
+              }
+            }
             #collapseFour {
               .card-body {
                 .thumbnails {
@@ -229,6 +253,22 @@ body {
       .dashboard-main-container {
         .accordion {
           .card {
+            .card-header {
+              h1 {
+                .accordion-button {
+                  font-size: 3.5rem;
+                }
+                img {
+                  height: 25px;
+                  margin-bottom: 15px;
+                  margin-right: 10px;
+                }
+              }
+
+              p {
+                margin-left: 35px;
+              }
+            }
             #collapseThree {
               margin: 0 auto 20px auto;
 
@@ -240,6 +280,13 @@ body {
 
               .module-3 {
                 display: none;
+              }
+            }
+
+            .button-persist {
+              p {
+                margin-left: 17px;
+                margin-right: 50px;
               }
             }
 
@@ -315,13 +362,21 @@ body {
             .card-header {
               img {
                 height: 30px !important;
-                // width: 50px;
               }
 
               h1 {
                 .accordion-button {
                   font-size: 4.5rem;
                 }
+              }
+              p {
+                margin-left: 50px;
+              }
+            }
+
+            .button-persist {
+              p {
+                margin-left: 31px;
               }
             }
           }
@@ -337,6 +392,25 @@ body {
       .dashboard-main-container {
         .accordion {
           .card {
+            .card-header {
+              h1 {
+                img {
+                  height: 40px !important;
+                  margin-bottom: 17px;
+                  margin-right: 10px;
+                }
+              }
+              p {
+                margin-left: 75px;
+              }
+            }
+
+            .button-persist {
+              p {
+                margin-left: 55px;
+              }
+            }
+
             #collapseFour {
               .card-body {
                 .thumbnails {
@@ -349,17 +423,16 @@ body {
 
             .leader-slide {
               .card-body {
-                
-
                 .ranking {
                   display: flex;
                   ul {
                     display: inline-block;
-                    width: 400px;
+                    width: 350px;
                   }
 
                   .leaders {
-                    margin-right: 5rem;
+                    margin-right: 3rem;
+                    margin-left: 67px;
                   }
 
                   .scores {
@@ -384,6 +457,23 @@ body {
             #collapseThree {
               .module-3 {
                 display: inline-block;
+              }
+            }
+            .leader-slide {
+              .card-body {
+                .ranking {
+                  ul {
+                    width: 400px;
+                  }
+
+                  .leaders {
+                    margin-right: 3rem;
+                  }
+
+                  .scores {
+                    margin-top: 0 !important;
+                  }
+                }
               }
             }
           }
